--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: consolas;
+    font-family: sans-serif;
 }
 section{
     width: 100%;
@@ -19,5 +19,46 @@ section{
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
 }
-
+.clock .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.date{
+    display: flex;
+    flex-direction: row; 
+}
+.time {
+    display: flex;
+    flex-direction: row;
+}
+.clock .container h2 {
+    font-size: 6em;
+    color: white;
+}
+.clock .container h3 {
+    font-size: 2em;
+    color: white;
+    padding: 0 1rem 1rem 1rem;
+    font-weight: 200;
+}
+.clock .container h2:nth-child(odd){
+    padding: 5px 15px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.2);
+    margin: 0 10px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+}
+#ampm{
+   position: relative;
+   top: -20px;
+   font-size: 2em;
+   color: white;
+   font-weight: 700;
+}
