--- a/style.css
+++ b/style.css
@@ -13,16 +13,47 @@ section{
     align-items: center;
 }
 .clock {
-   
+    position: relative;
     width: 700px;
     height: 250px;
-    background-color: rgba(255, 255, 255, 0.05);
+    background: linear-gradient(0deg, #000, #272727);
     box-shadow: 0 15px 25px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(20px);
 }
-.clock .container {
+.clock:before, .clock:after{
+	content: '';
+	position: absolute;
+	left: -2px;
+	top: -2px;
+	background: linear-gradient(45deg, #fb0094, #0000ff, #00ff00, #ffff00, #fb0094, #0000ff, #00ff00, #ffff00, #ff0000);
+	background-size: 400%;
+	width: calc(100% + 4px);
+	height: calc(100% + 4px);
+	z-index: -1;
+	animation: steam 20s linear infinite;
+
+}
+@keyframes steam {
+	0%{
+		background-position: 0 0;
+
+	}
+	50%{
+		background-position: 400% 0;
+	}
+	100%{
+		background-position: 0 0;
+	}
+
+}
+.clock:after{
+	filter: blur(50px);
+}
+
+.container {
+    background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: center;
